--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
-    "@strapi/plugin-graphql": "^4.0.5",
-    "fs-extra": "^10.0.0",
-    "lodash.set": "^4.3.2",
-    "mime-types": "^2.1.27",
+    "@strapi/plugin-graphql": "4.6.0",
+    "fs-extra": "11.1.0",
+    "lodash.set": "4.3.2",
+    "mime-types": "2.1.35",
     "@strapi/strapi": "4.6.0",
     "@strapi/plugin-users-permissions": "4.6.0",
     "@strapi/provider-upload-aws-s3": "4.6.0",
@@ -11,7 +11,7 @@
     "better-sqlite3": "7.4.6",
     "pg": "8.9.0"
   },
-  "name": "strapiwtf",
+  "name": "recipe-strapi-blog",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
